--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="google-site-verification" content="IuIjuQe1yK9x5cfPOhBaxYLuOFDgZoNKQdYPwMsD8l4" />
         <link rel="SHORTCUT ICON" href="./zhao.ico"/>
-        <link rel="stylesheet" type="text/css" media="screen" href="http://yui.yahooapis.com/combo?3.1.0/build/cssreset/reset-min.css&3.1.0/build/cssfonts/fonts-min.css&3.1.0/build/cssgrids/grids-min.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="https://yui.yahooapis.com/combo?3.1.0/build/cssreset/reset-min.css&3.1.0/build/cssfonts/fonts-min.css&3.1.0/build/cssgrids/grids-min.css">
         <link rel="stylesheet" type="text/css" media="screen" href="./assets/style.css">
         <script type="text/javascript">
             //console.log(screen.height);
@@ -57,8 +57,8 @@
         <hr id="hr2">
         <div id="ft"></div>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js" type="text/javascript"></script>
         <script src="./assets/3rd_party/jquery.photoservice.js" type="text/javascript"></script>
         <script src="./assets/3rd_party/jquery.keyboardlistener.js" type="text/javascript"></script>
         <script src="./assets/zs.js" type="text/javascript"></script>
